src/app/contacts/contacts.component.scss
@import '../../styles/_variables.scss';

ul.list {
  margin: 0;
  list-style: none;
  .list-item {
    display: flex;
    flex-wrap: nowrap;
    .name {
      width: 30%;
      color: $black;
      min-width: 90px;
    }
    .value a {
      color: $header-text-color;
      &:hover {
        text-decoration: none;
      }
    }
  }
}

@media print {
  ul.list .list-item .value a {
    color: $black;
    text-decoration: none;
  }
}

@media (max-width:800px) {
  ul.list {
    padding-left: 0px;
  }
}

